完成《首页》《新闻动态》《案例》《公共内容页》样式布局

--- a/pages/demo/demo.wxml
+++ b/pages/demo/demo.wxml
@@ -1,2 +1,19 @@
 <!--pages/demo/demo.wxml-->
-<text>pages/demo/demo.wxml</text>
+<scroll-view scroll-y="true">
+  <view class='body'>
+        <text>某某案例</text>
+        <image src='../../images/anli.png'/>
+  </view>
+  <view class='body'>
+        <text>某某案例</text>
+        <image src='../../images/anli.png'/>
+  </view>
+  <view class='body'>
+        <text>某某案例</text>
+        <image src='../../images/anli.png'/>
+  </view>
+  <view class='body'>
+        <text>某某案例</text>
+        <image src='../../images/anli.png'/>
+  </view>
+</scroll-view>
