--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -32,27 +32,52 @@
 .body-list-content{
   border-radius: 8rpx;
   margin: 6rpx;
-  /* border: 1px solid #888888; */
-   box-shadow: 0px 1px 2px #888888; 
+   border: 1px solid #DEDEDE; 
+    /* box-shadow: 0px 1px 2px #888888;   */
   height: 160rpx;
   flex: 1;
+  display: flex;
+  align-items: center;
+}
+.backchange{
+  background-color: #E0EEEE;
+}
+.body-list-content image{
+  margin: 0 40rpx;
+  width: 80rpx;
+  height: 80rpx;
+}
+.body-list-content text{
+  color: #363636;
+  font-weight: bold;
+   padding-left: 8rpx; 
+  font-size: 32rpx;
 }
 
 /*新闻列表*/
 .news-list-head{
-  margin: 20rpx 14rpx;
-  padding: 10rpx 0;
+  margin: 20rpx 14rpx;  
+  padding: 10rpx 0;  
   border-bottom: 2px solid #B0E0E6;
   height: 60rpx;
+  flex: 1;
 }
 .news-list-head image{
   width:60rpx;
   height:60rpx;
 }
-/*写到此处，接下来要写左右浮动*/
+/*新闻列表内容*/
 .news-list-content{
+  color: #8F8F8F;
   height: 60rpx;
-  background-color: #eee;
-  margin: 6rpx 20rpx;
+  font-size: 26rpx;
   border-bottom: 1px solid #ccc;
+  line-height: 60rpx;
+}
+.title {
+  margin-left: 20rpx;
+}
+.timedata {
+  float: right;
+  margin-right: 20rpx;
 }
