--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -1,1 +1,56 @@
 /* pages/news/news.wxss */
+.body{
+  /* background-color: #ccc; */
+  overflow: hidden;
+  margin-top:10rpx; 
+  margin-bottom: 30rpx;
+  box-shadow: 0px 3px 4px #AAAAAA;
+   border-top: 4px solid #66CDAA;  
+	 /* background-image:-webkit-gradient(linear,left top,right top,from(#ccc),to(#888888));  */
+}
+/*头部样式*/
+.header{
+  /* background-color: red; */
+  height: 100rpx;
+  display: flex;
+  align-items: center;
+}
+/*图片*/
+.header image{
+  width: 70rpx;
+  height: 70rpx;
+  margin: 0 40rpx;
+}
+/*时间*/
+.header text{
+  margin-left: 10rpx;
+  font-size: 28rpx;
+}
+
+/*主体文章样式*/
+.min{
+  height: 240rpx;
+}
+/*标题样式*/
+.title{
+  display: block;
+  font-weight: bold;
+  margin-left: 40rpx;
+  font-size: 32rpx;
+}
+/*内容样式*/
+.content{
+  margin-top: 20rpx;
+  margin-left: 40rpx;
+  display: block;
+  font-size: 28rpx;
+  color: #919191;
+}
+
+/*查看详情样式*/
+.foot{
+  color: #00C5CD;
+  font-size: 30rpx;
+  float: right;
+  margin: 20rpx;
+}
