《调整样式》《处理案例略缩图》《准备更新文章和上线》

--- a/pages/demo/demo.wxml
+++ b/pages/demo/demo.wxml
@@ -2,6 +2,6 @@
 <scroll-view scroll-y="true" wx:for="{{demos}}">
   <view class='body' hover-class='backchange' id='{{item.id}}' bindtap='details'>
         <text>{{item.article_name}}</text>
-        <image src='../../images/anli.png'/>
+        <image src='{{item.img_url?item.img_url:"../../images/anli.png"}}'/>
   </view>
 </scroll-view>
